--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="<%= BASE_URL %>assets/js/plotly-2.27.0.min.js"></script>
-    <title>Python在线执行环境</title>
+    <title>AI Data Note</title>
   </head>
   <body>
     <noscript>
